--- a/platforms/ios/HelloWorld/HelloWorld-Info.plist
+++ b/platforms/ios/HelloWorld/HelloWorld-Info.plist
@@ -52,5 +52,13 @@
       <string>UIInterfaceOrientationPortraitUpsideDown</string>
       <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
+    <key>NSContactsUsageDescription</key>
+    <string/>
+    <key>NSCameraUsageDescription</key>
+    <string></string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string></string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string/>
   </dict>
 </plist>
