--- a/platforms/ios/HelloWorld/HelloWorld-Info.plist
+++ b/platforms/ios/HelloWorld/HelloWorld-Info.plist
@@ -55,9 +55,9 @@
     <key>NSContactsUsageDescription</key>
     <string/>
     <key>NSCameraUsageDescription</key>
-    <string></string>
+    <string/>
     <key>NSPhotoLibraryUsageDescription</key>
-    <string></string>
+    <string/>
     <key>NSLocationWhenInUseUsageDescription</key>
     <string/>
   </dict>
